2重起動防止系のメッセージ出力にてエラーを出していたので修正(メソッド分けした時にできたバグ)

--- a/README
+++ b/README
@@ -1,5 +1,11 @@
 
-kanamei/keystoneからのポーティングです。
-loggerはもう夢を忘れて簡単にしちゃいました。
+# batchbase
 
-インストールはrake -Tで確認してください
+kanamei/keystoneからのポーティングです。
+
+## 基本的機能は
+
+* 2重起動チェック、、、、ぐらいです
+
+## インストールはrake -Tで確認してください
+
